--- a/public/reset.css
+++ b/public/reset.css
@@ -1,5 +1,3 @@
-
-
 * {
   margin: 0;
   padding: 0;
@@ -7,18 +5,32 @@
 }
 
 
-*, *::before, *::after { box-sizing: border-box; }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 
-html { font-family: var(--ff-inter); }
+html {
+  font-family: var(--ff-inter);
+}
 
 
-h1, h2, h3, h4, h5, h6 { color: black; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+}
 
 
 body {
-  background-color:  white;
+  background-color: white;
   -webkit-font-smoothing: antialiased;
+  font-family: 'roboto', sans-serif;
 }
 
 img {
@@ -29,7 +41,9 @@ img {
   object-fit: cover;
 }
 
-input, button, select {
+input,
+button,
+select {
   font: inherit;
   background: none;
   border: none;
@@ -41,7 +55,9 @@ button {
   cursor: pointer;
 }
 
-li { list-style: none; }
+li {
+  list-style: none;
+}
 
 
 a {
