Add users collection

--- a/public/media_query.css
+++ b/public/media_query.css
@@ -105,7 +105,7 @@
   .banner { display: none; }
 
 
-  .movies { margin-top: 120px; }
+  .laptops { margin-top: 120px; }
 
   .filter-bar {
     flex-direction: column;
