--- a/src/components/laptops/cart.css
+++ b/src/components/laptops/cart.css
@@ -11,6 +11,8 @@
     margin-top: 15px;
     max-height: 70vh;
     padding: 20px 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .product {
@@ -35,9 +37,6 @@
 }
 
 .cart-bottom {
-    position: absolute;
-    bottom: 12px;
-    right: 5px;
     width: 100%;
     padding: 30px 65px;
 }
