--- a/public/main.css
+++ b/public/main.css
@@ -424,6 +424,8 @@ footer {
 
 .laptop-image>img {
   border-radius: 16px;
+  width: 300px;
+  height: 300px;
 }
 
 .price {
@@ -444,4 +446,9 @@ footer {
   background-color: red;
   color: white;
   margin-right: 10px;
+}
+
+.details-buttons>a {
+  display: inline-block;
+  margin-left: 10px;
 }
