--- a/public/media_query.css
+++ b/public/media_query.css
@@ -125,4 +125,13 @@
   .footer-copyright { flex-direction: column-reverse; }
 
   .wrapper { margin-bottom: 20px; }
+
+  .laptop-details {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .laptop-info {
+    margin-top: 10px;
+  }
 }
