--- a/public/media_query.css
+++ b/public/media_query.css
@@ -1,4 +1,3 @@
-
 @media screen and (max-width: 1200px) {
 
   :root {
@@ -15,7 +14,9 @@
     z-index: 50;
   }
 
-  header.active { top: 250px; }
+  header.active {
+    top: 250px;
+  }
 
   nav {
     position: fixed;
@@ -25,13 +26,15 @@
     z-index: 100;
   }
 
-  nav.active { top: 0; }
+  nav.active {
+    top: 0;
+  }
 
   .navbar-nav {
     height: 250px;
     flex-direction: column;
     justify-content: center;
-    align-items:     flex-start;
+    align-items: flex-start;
     padding-left: var(--px);
     border-bottom: 1px solid var(--oxford-blue);
   }
@@ -43,33 +46,49 @@
 
   .navbar-form {
     margin-right: 0;
-    display:         flex;
+    display: flex;
     justify-content: space-between;
-    align-items:     center;
+    align-items: center;
     z-index: 100;
   }
 
-  .navbar-form.active { top: 0; }
+  .navbar-form.active {
+    top: 0;
+  }
 
-  .navbar-form-search { margin-right: 40px; }
+  .navbar-form-search {
+    margin-right: 40px;
+  }
 
-  .navbar-form-btn { right: 80px; }
+  .navbar-form-btn {
+    right: 80px;
+  }
 
-  .banner { margin-top: 100px; }
+  .banner {
+    margin-top: 100px;
+  }
 
-  .banner-card .card-title { font-size: 2.5em; }
+  .banner-card .card-title {
+    font-size: 2.5em;
+  }
 
-  .category-grid { grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); }
+  .category-grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
 
-  .footer-content { flex-direction: column; }
+  .footer-content {
+    flex-direction: column;
+  }
 
   .footer-brand {
     margin-right: 0;
     margin-bottom: 60px;
   }
 
-  .footer-links { grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); }
-  
+  .footer-links {
+    grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
+  }
+
 }
 
 @media screen and (max-width: 1024px) {
@@ -95,36 +114,51 @@
 
 
 
-    --px: 40px; 
+    --px: 40px;
 
   }
 
-  .banner { display: none; }
+  .banner {
+    display: none;
+  }
 
   .filter-bar {
     flex-direction: column;
     align-items: flex-start;
   }
 
-  .filter-bar select { margin-bottom: 20px; }
+  .filter-bar select {
+    margin-bottom: 20px;
+  }
 
-  .filter-radios { width: 100%; }
+  .filter-radios {
+    width: 100%;
+  }
 
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 600px) {
   :root {
 
     --px: 20px;
 
     --section-heading: 32px;
-    --fs-lg:           20px;
+    --fs-lg: 20px;
 
   }
 
-  .footer-copyright { flex-direction: column-reverse; }
+  .cart-bottom {
+    width: 300px;
+    padding: 30px 0;
+  }
 
-  .wrapper { margin-bottom: 20px; }
+  .footer-copyright {
+    flex-direction: column-reverse;
+  }
+
+  .wrapper {
+    margin-bottom: 20px;
+  }
 
   .laptop-details {
     flex-direction: column;
@@ -133,5 +167,35 @@
 
   .laptop-info {
     margin-top: 10px;
+  }
+
+  .product {
+    flex-direction: column;
+  }
+
+  .flex-top {
+    width: 200px;
+  }
+
+
+}
+
+@media screen and (max-width: 430px) {
+  .item-desc .flex {
+    width: 250px;
+  }
+
+  .btn-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 310px) {
+  .item-desc .flex {
+    width: 200px;
+  }
+
+  .btn-container {
+    width: 200px;
   }
 }
