--- a/public/media_query.css
+++ b/public/media_query.css
@@ -105,6 +105,13 @@
     right: 60px;
   }
 
+  .purchase {
+    width: 370px;
+    margin-top: 100px;
+    padding: 20px;
+    height: 350px;
+  }
+
 }
 
 
