--- a/public/auth.css
+++ b/public/auth.css
@@ -1,6 +1,6 @@
 .auth {
     width: 400px;
-    background-color: darkblue;
+    background-color: rgb(189, 27, 27);
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255, 255, 255, 0.1);
