--- a/public/main.css
+++ b/public/main.css
@@ -693,3 +693,12 @@ form * {
 .not-found-info h2 {
   text-align: center;
 }
+
+.also-like {
+  margin-top: 100px;
+}
+
+.also-like h2 {
+  text-align: center;
+  margin-bottom: 50px;
+}
