--- a/public/main.css
+++ b/public/main.css
@@ -400,15 +400,9 @@ input~.checked-radio-bg {
   color: white;
 }
 
-.not-found {
-  position: relative;
-}
 
 .not-found-info {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%);
+  text-align: center;
 }
 
 .laptop-details {
