--- a/public/main.css
+++ b/public/main.css
@@ -696,3 +696,9 @@ form * {
   text-align: center;
   margin-bottom: 50px;
 }
+
+.errors {
+  text-align: center;
+  color: red;
+  margin-top: 10px;
+}
